@@ -638,87 +638,6 @@ bool FileTree::replace_matches_at_path_iter(const Gtk::TreeModel::Path& path,
   return false;
 }
 
-bool FileTree::next_match_file(Gtk::TreeModel::iterator& iter, Gtk::TreeModel::Path* collapse)
-{
-  g_return_val_if_fail(iter, false);
-
-  const FileTreeColumns& columns = FileTreeColumns::instance();
-  Gtk::TreeModel::iterator parent = iter->parent();
-
-  for (++iter;;)
-  {
-    if (iter)
-    {
-      if ((*iter)[columns.matchcount] > 0)
-      {
-        if (const Gtk::TreeModel::Children& children = iter->children()) // directory?
-        {
-          parent = iter;
-          iter = children.begin();
-          continue;
-        }
-
-        return true;
-      }
-    }
-    else if (parent)
-    {
-      iter = parent;
-      parent = iter->parent();
-
-      if (collapse)
-        *collapse = iter;
-    }
-    else
-      break;
-
-    ++iter;
-  }
-
-  return false;
-}
-
-bool FileTree::prev_match_file(Gtk::TreeModel::iterator& iter, Gtk::TreeModel::Path* collapse)
-{
-  g_return_val_if_fail(iter, false);
-
-  const FileTreeColumns& columns = FileTreeColumns::instance();
-  Gtk::TreeModel::iterator parent = iter->parent();
-  Gtk::TreeModel::Path path (iter);
-
-  for (;;)
-  {
-    if (path.prev())
-    {
-      iter = parent->children()[path.back()];
-
-      if ((*iter)[columns.matchcount] > 0)
-      {
-        if (const Gtk::TreeModel::Children& children = iter->children()) // directory?
-        {
-          parent = iter;
-          path.push_back(children.size());
-          continue;
-        }
-
-        return true;
-      }
-    }
-    else if (parent)
-    {
-      parent = parent->parent();
-      path.up();
-
-      if (collapse)
-        *collapse = path;
-    }
-    else
-      break;
-  }
-
-  return false;
-}
-
 void FileTree::expand_and_select(const Gtk::TreePath& path)
 {
   expand_to_path(path);
